--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,6 +14,8 @@
       %p.alert.alert-success= notice
     - if alert
       %p.alert.alert-danger= alert
+
+    = checkout_link
     = shop_icon_quantity
     = link_to "Sign up", new_user_registration_path unless current_page? new_user_registration_path
     = link_to "Login", new_user_session_path
